name:                sokoban
version:             0.2.4
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kmein/sokoban#readme
license:             BSD3
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
copyright:           (C) Kierán Meinhardt 2016
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Sokoban
                     , Game.Sokoban.Console
                     , Game.Sokoban.Gtk
                     , Game.Sokoban.Levels
                     , Game.Sokoban.Types
  build-depends:       base >= 4.7 && < 5
                     , cairo
                     , containers
                     , gtk
                     , linear
                     , mtl
  default-language:    Haskell2010

executable sokoban-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , sokoban
  default-language:    Haskell2010

test-suite sokoban-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sokoban
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kmein/sokoban
